# PostArchiver

./: .gitignore  Cargo.toml  README.md  context7.json  gen-types.mjs  plan.md  refactoring.md
.github/: copilot-instructions.md
.github/workflows/: bridge.yml  publish.yml  test.yml
docs/: intro.md
post-archiver-bridge/: Cargo.toml  README.md
post-archiver-bridge/src/: config.rs  main.rs  v1.rs  v2.rs  v3.rs  v4.rs  v5.rs
src/: alias.rs  author.rs  collection.rs  comment.rs  content.rs  error.rs  file_meta.rs  id.rs  impls.rs  lib.rs  link.rs  macros.rs  manager.rs  platform.rs  post.rs  structs.rs  tag.rs
src/author/: alias.rs  mod.rs
src/editor/: author.rs  collection.rs  file_meta.rs  mod.rs  post.rs
src/file_meta/: mod.rs
src/importer/: author.rs  collection.rs  file_meta.rs  mod.rs  platform.rs  post.rs  tag.rs  tags.rs  template.sql
src/manager/: author.rs  binded.rs  collection.rs  file_meta.rs  mod.rs  platform.rs  post.rs  tag.rs
src/post/: content.rs  mod.rs  tag.rs
src/query/: author.rs  collection.rs  file_meta.rs  filter.rs  mod.rs  platform.rs  post.rs  tag.rs
src/tests/: helpers.rs  manager.rs  mod.rs  utils.rs
src/tests/common/: database.rs  factories.rs  mod.rs
src/tests/core/: ids.rs  mod.rs  models.rs
src/tests/importer/: author.rs  collection.rs  file_meta.rs  mod.rs  platform.rs  post.rs  tag.rs  tags.rs
src/tests/manager/: author.rs  collection.rs  file_meta.rs  mod.rs  platform.rs  post.rs  tag.rs
src/tests/query/: author.rs  collection.rs  file_meta.rs  mod.rs  platform.rs  post.rs  tag.rs
src/utils/: author.rs  collection.rs  file_meta.rs  id.rs  macros.rs  manager.rs  mod.rs  post.rs  rusqlite.rs  tag.rs  template.down.sql  template.sql  template.up.sql
