[package]
name = "post-archiver"
version = "0.1.8"
edition = "2021"
license = "BSD-3-Clause"
description = "A Unify Archive"
authors = ["xiao-e-yun <a0970323059@gmail.com>"]
repository = "https://github.com/xiao-e-yun/PostArchiver"


[features]
typescript = ["dep:ts-rs"]
utils = ["dep:mime_guess", "dep:rusqlite"]


[dependencies]
serde = { version = "1.0", features = ["derive", "std"] }
chrono = { version = "0.4", features = ["serde"] }

# typescript
ts-rs = { version = "10.1", features = ["chrono-impl", "no-serde-warnings"], optional = true }

# utils
mime_guess = { version = "2.0", optional = true }
rusqlite = { version = "0.32", optional = true }