[package]
name = "post-archiver"
version = "0.0.0"
edition = "2021"
license = "BSD-3-Clause"
description = "A Unify Archive"
authors = ["xiao-e-yun <a0970323059@gmail.com>"]
repository = "https://github.com/xiao-e-yun/PostArchiver"


[features]
typescript = ["dep:ts-rs"]
utils = ["dep:rusqlite"]
importer = ["editor"]
editor = ["utils"]

[dependencies]
serde = { version = "1.0", features = ["derive", "std"] }
chrono = { version = "0.4", features = ["serde"] }

# typescript
ts-rs = { version = "10.1", features = [
    "chrono-impl",
    "no-serde-warnings",
], optional = true }

# utils
rusqlite = { version = "0.32", optional = true, features = ["chrono"] }
serde_json = "1.0"
dashmap = "6"

[dev-dependencies]
tempdir = "0.3.7"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
