[package]
name = "post-archiver-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
post-archiver-latest = { package = "post-archiver", path = "../", features = ["utils"] }
post-archiver-v0-1 = { package = "post-archiver", version = "0.1.14" }

clap = { version = "4.5.27", features = ["derive"] }
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
simple_logger = "5.0.0"
rusqlite = { version = "0.32", features = ["chrono"] }
chrono = "0.4.39"
mime_guess = "2.0.5"
tokio = { version = "1.43.0", default-features = false, features = ["fs", "rt"] }
